--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -61,7 +61,7 @@ scrape_configs:
 alerting:
   alertmanagers:
     - static_configs:
-        - targets: ['localhost:9093']
+        - targets: ['alertmanager:9093']
 
 rule_files:
   - "/etc/prometheus/rules/*.yml"
